--- a/1-mult/mult.vm
+++ b/1-mult/mult.vm
@@ -1,2 +1,27 @@
-// implemente a funcao mult que recebe dois argumentos
-// e retorna a multiplicacao
+function mult 2
+    push constant 0
+    pop local 0       // local 0 = resultado (inicializa com 0)
+    push argument 1
+    pop local 1       // local 1 = contador (cópia de argument 1)
+    
+label loop
+    push local 1
+    push constant 0
+    eq                // verifica se contador == 0
+    if-goto end       // se sim, termina
+    
+    push local 0
+    push argument 0
+    add               // resultado = resultado + argument 0
+    pop local 0
+    
+    push local 1
+    push constant 1
+    sub               // contador = contador - 1
+    pop local 1
+    
+    goto loop
+    
+label end
+    push local 0      // retorna o resultado
+    return
